--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,66 @@
 body{
-
-  background-color: #727bbe;
-
-
+  margin: 0;
+  padding: 0;
 }
 
-.custome_wrapper{
+.flex_grid{
 
-  margin: 20px 0px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
- 
-}
- h4{
-  color:#fff;
-  text-align: center;
-  font-size: 40px;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
-.card_data{
-  width:450px ;
-  flex-basis: 450px;
-  padding: 10px 20px;
-  box-shadow: 0 4px 6px 0 rgb(0 0 0 / 20%);
-  border-radius: 5px;
-  text-align: justify;
-  margin-bottom: 20px;
-  background-color: #dedede;
-  position: relative;
+.user_input{
+  margin: 30px;
+    padding-left: 30px;
+}
 
-  margin: 10px;
+.user_input h4 {
+  margin: 0;
+  color: #f44336;
+  font-size: 24px;
+}
+
+form{
+
+  margin: 10px 0px;
+
+}
+ button{
+  padding: 15px 40px;
+  background-color: #f44336;
+  border-radius: 3px;
+  border: unset;
+  outline: none;
+  color: #fff;
+  margin-left: 20px;
+  /* vertical-align: middle; */
+  font-size: 18px;
+
 
 }
 
-.user_details{
-
+input{
+  line-height: 1.5;
+    padding: 8px 8px;
+    border-radius: 3px;
+    font-size: 20px;
 }
 
-.flight_details{
-
+span{
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  display: block;
 }
 
-.flight_details img{
-  position: absolute;
-  top:12px;
-  right: 12px;
-  width: 90px;
-}
-.flight_details span{
- 
-}
-.flight_details span:nth-child(2){
-  float:right;
- }
-.flight_details span:nth-child(4){
- display: block;
+.user_input li{
+
+  font-size: 22px;
 }
 
-.page_Loader{
-margin: 30px 0px;
-font-size: 24px;
-text-align: center;  
-color:#fff;
-font-weight: 600;
+.user2 h4{
+  color:#26a69a;
+  margin: 10px 0px;
 }
+
